--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-12 jumbotron text-center">
-        <h1>Belly Button Biodiversity Dashboard</h1>
+      <div class="col-md-12 jumbotron text" style="background-image: url('static/bellybuttons.webp');
+      background-size: cover; background-position: upwards; text-align:center; color:#efdf3c;">
+        <h1><b>Belly Button Biodiversity Dashboard</b></h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
@@ -22,26 +23,29 @@
       <div class="col-md-2">
         <div class="well">
           <h5>Test Subject ID No.:</h5>
-          <!-- <select id="selDataset"></select> -->
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
         <div class="panel panel-primary">
           <div class="panel-heading">
             <h3 class="panel-title">Demographic Info</h3>
           </div>
-          <div id="sample-metadata" class="panel-body"></div>
+          <div id="sample-metadata" class="panel-body dt-responsive bg-info" ></div>
         </div>
       </div>
       <div class="col-md-5">
         <div id="bar"></div>
+        <div class="caption text-center">The bar chart identifies the top ten bacterial species <br> for the given OTU ID.</div>
       </div>
       <div class="col-md-5">
         <div id="gauge"></div>
+        <div class="caption text-center">The gauge chart shows the washing frequency for the given OTU ID.</div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
-        <div id="bubble"></div>
+        <div id="bubble">
+            <div class="caption text-center">The bubble chart shows bacterial concentration across all collected samples for the given OTU ID.</div>
+        </div>
       </div>
     </div>
   </div>
